fixed top grid spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -636,13 +636,12 @@ main {
             }
 
             &.four {
-
                 width: 448.32px;
                 height: 274px;
             }
 
             &.five {
-
+                border: .15px grey solid;
                 width: 325.85px;
                 height: 274px;
             }
